objects/ssot__BenefitItemCode__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Item Code Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceItemCodeId__c</fullName>
        <label>Reference Item Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceItemCodeObject__c</fullName>
        <label>Reference Item Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227409852_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitItemCode_ReferenceItemCodeId__rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>BenefitItemCode_ReferenceItemCodeId__rel</relationshipLabel>
        <relationshipName>rel_1729227409852_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227423604_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitItemCode_ReferenceItemCodeId__rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>BenefitItemCode_ReferenceItemCodeId__rel</relationshipLabel>
        <relationshipName>rel_1729227423604_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>